worked on container5

--- a/src/Componts/Container2/Cont3.css
+++ b/src/Componts/Container2/Cont3.css
@@ -13,6 +13,10 @@
     padding-right: 5rem;
     margin-top: 1rem;
 }
+.stranger{
+    margin-top: 6.5rem;
+
+}
 .blue{
     color: blue;
    font-size: 1.111rem;
