--- a/src/Componts/Container4/Cont5.css
+++ b/src/Componts/Container4/Cont5.css
@@ -19,10 +19,13 @@
 
 }
 .assets-2{
-   padding-right: 8rem;
+   /* padding-right: 8rem; */
+   padding-left: 5rem;
    height: 100%;
    width: 100rem;
 }
 .kids{
     padding-bottom: 8rem;
+    padding-right: 5rem;
+
 }
